styles.css
/* Style the Body */
body  {
  font-family: Arial;
  margin: 0;
  background-color: #d0bba0;
  color: #451b16;
  padding: 2em;
}

h1  {
  font-size: 30px;
  font-weight: bold;
}

/* Center the Banner image */
.custom_banner {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 15px;
  margin-bottom: 15px;
  width: 80%;
}

.navbar-custom {
  background-color: #451b16;
  font-weight: bold;
}

.nav-link {
  color: #f2f2f2;
}

.nav-link:active, .nav-link:hover {
  background-color: #ddd;
  color: #451b16;
  font-weight: 900;
}

/* Override bootstrap navbar color */
.navbar-custom .navbar-brand,.navbar-custom .navbar-text {
  color: #f2f2f2;
}

.custom-toggler.navbar-toggler {
  border-color: #f2f2f2;
}

.custom-toggler .navbar-toggler-icon {
  background-image: url(
"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(242, 242, 242, 242)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

/*Sticky and Responsive Top Navigation */
.custom_nav  {
  overflow: hidden;
  background-color: #451b16;
  margin: 0;
  padding: 0;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
  z-index: 99;

}

/* navigation links styling */
.custom_nav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-weight: bold;
  font-size: 20px;

}
/* navigation links styling on hover */
.custom_nav a:hover {
  background-color: #ddd;
  color: #451b16;
}
/* styling of active link */
.custom_nav a.active {
  background-color: #397d2d;
  color: #f2f2f2;
}
/* removes mobile icon on larger screens */
.custom_nav .icon {
  display: none;
}

/* Sets media screen size and behaviour for responsive navigation */
@media screen and (max-width: 768px) {
  .custom_nav a:not(:first-child) {display: none;}
  .custom_nav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 768px) {
  .custom_nav.responsive {position: relative;}
  .custom_nav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .custom_nav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}



/* Styling for the i-frame Vimeo video */
.container_iframe {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */

}

/* Responsive style to fit the iframe in the container div with full height and width */
.responsive_iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

